Thu Jan  6 23:44:54 2005  Tim Janik  <timj@gtk.org>

	* gsldatahandle.[hc]: removed unused QData.

Thu Jan  6 23:28:03 2005  Tim Janik  <timj@gtk.org>

	* gslloader-bsewave.c: removed <= 0.6.4 compat code, since we haven't
	released .bsewave files of that kind yet.

Thu Jan  6 23:03:36 2005  Tim Janik  <timj@gtk.org>

	* bse/gslloader-pat.cc: 
	* bse/bsetrack.c: use "gus-patch" play-type.

	* zintern/mono-wave.bse:
	* zintern/gus-patch-mono.bse: removed.
	
	* zintern/gus-patch.bse: removed "-mono" suffix from object.

Thu Jan  6 23:02:30 2005  Tim Janik  <timj@gtk.org>

	* zintern/gus-patch.bse: CVS copied from gus-patch-mono.bse.

Thu Jan  6 22:27:53 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* gslloader-pat.cc: Fix compilation: reintroduce data_offsets, as the
	loader_offset field is no more. Changed xinfos of envelopes to
	single comma delimited lists of floats.

Thu Jan  6 19:51:36 2005  Tim Janik  <timj@gtk.org>

	* bsewave.[hc]: keep inlined data handles opened, to protect against
	.bse file overwriting.

	* bsestorage.c (bse_storage_add_dblock): keep opened data handles
	open to protect against overwriting.

Thu Jan  6 18:37:16 2005  Tim Janik  <timj@gtk.org>

	* bsestorage.c: store/parse Ogg/Vorbis data handles as in compressed
	form, rather than unpacked.

	* bsewave.[hc]: removed wave chunk url structures which were unused
	anyway. store waves in order, sorted by oscillator frequency. use
	SfiRing to hold the list of wave chunks.

	* gsldatahandle-vorbis.[hc]: allow peeking of mix_freq from
	gsl_data_handle_new_ogg_vorbis_zoffset(). added convenience function
	gsl_vorbis1_handle_put_wstore().

	* gslloader-bsewave.c: use "vorbis-link" as keyword for inlined 
	Ogg/Vorbis streams. minor cleanups.

Wed Jan  5 01:10:54 2005  Tim Janik  <timj@gtk.org>

	* bseenums.[hc]: added BSE_ERROR_WRONG_N_CHANNELS.

	* gslloader-bsewave.c: make sure that chunks carry the required number
	of channels.

	* gsldatahandle-vorbis.c: pass on number of channels for